$Id: NEWS,v 1.240 2002-09-30 20:52:59 castaglia Exp $

CVS
---------------------------------
- Bug 1649 - setproctitle() prepends and appends process name
- Bug 1666 - Auth modules can return duplicate supplemental groups
- Bug 1654 - Add DESTDIR in Makefile
- Bug 1682 - Broken SyslogFacility requires custom syslog code
- Bug 1076 - Toggle parsing of .ftpaccess files with a AllowOverride
- Bug 1724 - AuthPAM off does not work beginning 1.2.5
- Bug 1593 - mod_sql doesn't cache failed uid lookups
- Bug 1719 - Add RFC2228 stuff to distribution
- Bug 1663 - Add SITE CHGRP command
- Bug 1725 - disconnect when specify multiple ranges on Allow
- Bug 1253 - No ability to configure address for main server
- Bug 1432 - Pedantic handling of leading whitespace in FTP commands
- Bug 1652 - Add connection-rate limiting mechanism
- Bug 1662 - Define _GNU_SOURCE
- Bug 1486 - mod_ls is extremly slow
- Bug 1669 - Filename meta (%f) not correctly expanded for some commands
             in WRITE logging class
- Bug 1065 - New directives to limit file size on upload and download
- Bug 1658 - Separate session/daemon resource limit settings
- Bug 1436 - Feature Enhancement: Timeouts on a <Virtualhost> basis
- Bug 1737 - Enhance file hiding via regular expressions
- Bug 1736 - RETR does not handle an inappropriate REST
- Added NetIO API
- Bug 1726 - Cygwin's Makefile inconsistency
- Bug 1713 - Scoreboard changes
- Bug 1395 - Check return values in PRIVS calls
- Bug 1732 - No checking for NULL at inet_ascii and pr_fnmatch
- Bug 1687 - Add contrib module for RADIUS authentication, accounting
- Bug 1572 - Need to use pam_end() to close session on Solaris 8
- Bug 1475 - Minor changes to SITE command handling
- Bug 1748 - SQLLog doesn't work with DELE (no filename with %f)

1.2.6 - Released 2002-09-04
---------------------------------
New mod_ldap (2.8.10)
- Fixed bug in matching of IP addresses introduced by Bug#1701

1.2.6rc2 - Released 2002-08-15
---------------------------------